--- a/style.css
+++ b/style.css
@@ -1,1 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+body{
+  background-color: #eee;
+}
+ul{
+  list-style-type: none;
+  padding: 5px;
+  text-align: center;
+  border-bottom: 1px solid lightgrey;
+  border-top: 1px solid lightgrey;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+nav li{
+  display: inline;
+  padding: 1px;
+}
+
+nav li a{
+  color: #777;
+}
+
+.newspaper-container{
+  width: 700px;
+  border-radius: 30px;
+  box-shadow: 10px 10px 10px #ddd;
+  padding: 30px;
+  margin: auto;
+  background-color: white;
+}
+
+h1{
+  text-align: center;
+}
+
+h5{
+  color: red;
+}
+
+main img{
+  width: 100%;
+}
+
+.more-articles{
+  padding-top: 5px;
+  border-top: 1px solid lightgrey;
+  display: flex;
+  width: auto;
+  height: auto;
+}
+
+main{
+  padding-bottom: 15px;
+}
